--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <body>
 	<div class="board-container">
-		<h3 class="title">Chess Engine</h3>
+		<h3 class="title">Chess</h3>
 		<div class="control-panel">
 			<div>
 				Search depth:
